about page updated

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="navbar bg-info navbar-dark navbar-expand-md">
+        <div class="navbar bg-info navbar-info navbar-expand-md">
             <div class="container">
                 <a href="index.ht5tml" class="navbar-brand"><img src="./assets/logo.png" height="45px"></a>
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#list">
